<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">手环位置</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="name">智能手环服务平台</string>
    <string name="et_password_hint">密码</string>
    <string name="et_account_hint">账号</string>
    <string name="log">登录</string>
    <string name="register">新建账户</string>
    <string name="all">全部</string>
    <string name="group">分组</string>
    <string name="back">返回</string>
    <string name="title_phoneNumber">请输入手环识别码和电话号码</string>
    <string name="register_telephone">手机号</string>
    <string name="register_number">手环识别码</string>
    <string name="register_password">密码</string>
    <string name="register_next">下一步</string>
    <string name="change_set">设置</string>
    <string name="change_message">健康资讯</string>
    <string name="change_locations">手环位置显示</string>
    <string name="change_heart">心率显示</string>
    <string name="title_map">手环位置显示</string>
    <string name="title_heart_rate">心率</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_finish">完成</string>
    <string name="register_name">姓名</string>
    <string name="register_age">年龄</string>
    <string name="guardian_tel">紧急联系电话</string>
    <string name="register_sex">请选择老人性别</string>
    <string name="title_guardian">请完善个人信息</string>
    <string name="title_alert">老人跌倒</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="title_message">健康信息</string>
</resources>
