<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
      android:background="@drawable/bg" >
 <!--  android:gravity="center_vertical" -->
<!--    android:orientation="vertical" -->
 <!--      android:id="@+id/RelativeLayout1"-->

   <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" 
        android:autoLink="all" 
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
       android:layout_marginTop="10dp"
       android:textColor="@color/white"/>
    
   <ImageView
       android:id="@+id/login_picture"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="20dp"
       android:contentDescription="@string/app_name"
       android:scaleType="centerInside"
       android:src="@drawable/logo_mark" 
       android:layout_below="@id/name1"/>

     
      <RelativeLayout 
        android:id="@+id/rl_user"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/login_picture">
    <LinearLayout
        android:id="@+id/ll_user_info"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name2"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:inputType="text"
            android:hint="@string/et_account_hint"
            android:background="@drawable/txt_input"
            android:layout_margin="2dp"/>
        <EditText 
            android:id="@+id/password2"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:inputType="textPassword"
            android:hint="@string/et_password_hint"
            android:background="@drawable/txt_input"
            android:layout_margin="2dp"/>
    </LinearLayout>
        <Button 
        android:id="@+id/log"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/log"
        android:layout_below="@id/ll_user_info"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>
    </RelativeLayout>
    

   <Button 
        android:id="@+id/login"
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/ipaddress_bg"
        android:textSize="16sp"/>
   
   <Button 
        android:id="@+id/ft_password"
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:text="@string/forget_password"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/forgetpassword"
        android:textColor="@color/white"
        android:textSize="16sp"/>


</RelativeLayout>
